<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="152dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_stock"
            android:ellipsize="end"
            android:fontFamily="@font/amiko_bold"
            android:maxLines="1"
            android:text="@string/judul"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#005BAA"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amiko"
            android:text="@string/kategori"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_indication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_category"
            android:layout_marginTop="8dp"
            android:text="@string/indikasi"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
